# Editor-con-Resaltado

tp-codigo/: CMakeLists.txt  EditorResaltado  EditorResaltado.cpp  EditorResaltado.h  comentarios.txt  editor_main.cpp  editor_tests  editor_tests.cpp  ui.hpp
